--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
 addopts = --pep8 --cov-config .coveragerc --cov . tests/
+
+; CouchDB credentials
+dbusername = username
+dbpassword = password
