more credentials in config-file

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,6 @@ addopts = --pep8 --cov-config .coveragerc --cov . tests/
 ; CouchDB credentials
 dbusername = username
 dbpassword = password
+dbname = testdb
+host = testhost
+port = 5984
