--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = --pep8 --cov-config .coveragerc --cov . tests/
 
-; CouchDB credentials
+; CouchDB credentials & config
 dbusername = username
 dbpassword = password
 dbname = testdb
